# strpo

./: README.md  pr-test-file.txt
.github/workflows/: cmake-ci.yml
labs/: .gitignore
labs/lab1/: Makefile
labs/lab1/src/: barrel.cpp  barrel.hpp  lab1.cpp  matrix.cpp  matrix.hpp  mystring.cpp  rect.cpp  rect.hpp  textwrapper.cpp  textwrapper.hpp
labs/lab1/tests/: test_bounding_rect.cpp  test_rect_basic_methods.cpp  test_rect_operations.cpp  test_rect_properties.cpp
labs/lab2/: Makefile
labs/lab2/src/: base32file.cpp  base32file.hpp  base32file2.cpp  base32file2.hpp  basefile.cpp  basefile.hpp  cat.rle  ifile.hpp  int_rle_ref.txt  lab2.cpp  mystring.cpp  mystring.hpp  rlefile.cpp  rlefile.hpp  rlefile2.cpp  rlefile2.hpp
labs/lab2/test/: test_b32.cpp  test_base.cpp  test_complex.cpp  test_rle.cpp  test_utils.cpp  (+1 more)
labs/lab3/: CMakeLists.txt  Makefile  lab3.cpp  matrix.cpp  matrix.hpp  mystring.cpp  mystring.hpp  notifications.cpp  notifications.hpp  test_move.txt  workerdb.cpp  workerdb.hpp
labs/lab3/src/: CMakeLists.txt  basefile.cpp  basefile.hpp  boolarray.cpp  boolarray.hpp  ifile.hpp  lab3.cpp  matrix.cpp  mystring.cpp  mystring.hpp  notifications.cpp  notifications.hpp  notifications_oop.cpp  notifications_oop.hpp  notifications_priority_queue.cpp  notifications_priority_queue.hpp  notificationsqueue.cpp  notificationsqueue.hpp  workerdb.cpp  workerdb.hpp
labs/lab3/test/: CMakeLists.txt  test_priority.cpp
labs/lab4/: Makefile  test_circles.txt
reports/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md
reports/docs/: alrogithm.md
(+12 files in other folders)
